<resources>
    <string name="app_name">YahniFood</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="address_label">Adres</string>
    <string name="min_delivery_price_label">Min. Siparis</string>
    <string name="min_delivery_time_label">Teslim Suresi</string>
    <string name="restaurant_menu_title">Restoran Menüsü</string>
    <string name="on_boarding_lorem_ipsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur vitae neque asuv scelerisque, imperdiet magna dignissim.</string>
    <string name="on_boarding_1_title_1">ANINDA</string>
    <string name="on_boarding_1_title_2">SİPARİŞ VER</string>
    <string name="on_boarding_2_title_1">ÖZENLE</string>
    <string name="on_boarding_2_title_2">HAZIRLANIR</string>
    <string name="on_boarding_3_title_1">HIZLI</string>
    <string name="on_boarding_3_title_2">TESLİMAT</string>
    <string name="button_next">Devam</string>
    <string name="button_start">Başla</string>
    <string name="imageholder_URL">https://cdn.friendlystock.com/wp-content/uploads/2019/12/4-special-pizza-cartoon-clipart.jpg</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Şifre</string>
    <string name="button_login">Giriş Yap</string>
    <string name="label_register">Henüz üye değil misiniz?</string>
    <string name="button_register">Kayıt Ol</string>
    <string name="hint_name">Ad</string>
    <string name="hint_surname">Soyad</string>
    <string name="hint_phone_number">Telefon Numarası</string>
    <string name="hint_register">Kaydol</string>
    <string name="add_your_restaurant_str">Restaurantını Ekle</string>
    <string name="general_info_text_str">Genel Bilgiler</string>
    <string name="restaurant_name_str">Restaurant Adı</string>
    <string name="phone_number_str">Telefon Numarası</string>
    <string name="address_info_text_str">Adres Bilgileri</string>
    <string name="city_str">Şehir</string>
    <string name="county_str">İlçe</string>
    <string name="address_detail_str">Açık Adres</string>
    <string name="has_restaurant_str">Restaurant Sahibi Misiniz?&#160;&#160;</string>
    <string name="save_restaurant">Restaurant Kaydet</string>
</resources>