<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.register.RegisterFragment">

    <ImageView
        android:id="@+id/imageView"
        android:src="@drawable/register_icon"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/textInputLayoutEmail"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintVertical_bias="0.45"
        app:layout_constraintVertical_chainStyle="packed"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayoutEmail"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/margin_32"
        android:layout_marginTop="@dimen/margin_16"
        android:hint="@string/hint_email"
        app:boxCornerRadiusBottomEnd="@dimen/margin_16"
        app:boxCornerRadiusBottomStart="@dimen/margin_16"
        app:boxCornerRadiusTopEnd="@dimen/margin_16"
        app:boxCornerRadiusTopStart="@dimen/margin_16"
        app:boxStrokeColor="@color/button_ice_blue"
        app:hintTextColor="@color/button_ice_blue"
        app:layout_constraintBottom_toTopOf="@id/textInputLayoutPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/imageView">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/textInputEditTextEmail"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayoutPassword"
        android:hint="@string/hint_password"
        app:boxStrokeColor="@color/button_ice_blue"
        app:hintTextColor="@color/button_ice_blue"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_4"
        android:layout_marginHorizontal="@dimen/margin_32"
        app:boxCornerRadiusTopStart="@dimen/margin_16"
        app:boxCornerRadiusTopEnd="@dimen/margin_16"
        app:boxCornerRadiusBottomStart="@dimen/margin_16"
        app:boxCornerRadiusBottomEnd="@dimen/margin_16"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        app:layout_constraintBottom_toTopOf="@id/textInputLayoutName"
        app:layout_constraintTop_toBottomOf="@id/textInputLayoutEmail"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/textInputEditTextPassword"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayoutName"
        android:hint="@string/hint_name"
        app:boxStrokeColor="@color/button_ice_blue"
        app:hintTextColor="@color/button_ice_blue"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_4"
        android:layout_marginHorizontal="@dimen/margin_32"
        app:boxCornerRadiusTopStart="@dimen/margin_16"
        app:boxCornerRadiusTopEnd="@dimen/margin_16"
        app:boxCornerRadiusBottomStart="@dimen/margin_16"
        app:boxCornerRadiusBottomEnd="@dimen/margin_16"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        app:layout_constraintBottom_toTopOf="@id/textInputLayoutSurname"
        app:layout_constraintTop_toBottomOf="@id/textInputLayoutPassword"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/textInputEditTextName"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayoutSurname"
        android:hint="@string/hint_surname"
        app:boxStrokeColor="@color/button_ice_blue"
        app:hintTextColor="@color/button_ice_blue"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_4"
        android:layout_marginHorizontal="@dimen/margin_32"
        app:boxCornerRadiusTopStart="@dimen/margin_16"
        app:boxCornerRadiusTopEnd="@dimen/margin_16"
        app:boxCornerRadiusBottomStart="@dimen/margin_16"
        app:boxCornerRadiusBottomEnd="@dimen/margin_16"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        app:layout_constraintBottom_toTopOf="@id/textInputLayoutPhoneNumber"
        app:layout_constraintTop_toBottomOf="@id/textInputLayoutName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/textInputEditTextSurname"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayoutPhoneNumber"
        android:hint="@string/hint_phone_number"
        app:boxStrokeColor="@color/button_ice_blue"
        app:hintTextColor="@color/button_ice_blue"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_4"
        android:layout_marginHorizontal="@dimen/margin_32"
        app:boxCornerRadiusTopStart="@dimen/margin_16"
        app:boxCornerRadiusTopEnd="@dimen/margin_16"
        app:boxCornerRadiusBottomStart="@dimen/margin_16"
        app:boxCornerRadiusBottomEnd="@dimen/margin_16"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        app:layout_constraintBottom_toTopOf="@id/buttonRegister"
        app:layout_constraintTop_toBottomOf="@id/textInputLayoutSurname"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/textInputEditTextPhoneNumber"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/buttonRegister"
        android:text="@string/hint_register"
        android:textAllCaps="false"
        app:cornerRadius="@dimen/margin_8"
        app:backgroundTint="@color/button_ice_blue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_8"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textInputLayoutPhoneNumber"
        app:layout_constraintEnd_toEndOf="@id/textInputLayoutPassword" />

    <ProgressBar
        android:id="@+id/progressBar"
        android:visibility="gone"
        android:layout_marginTop="@dimen/margin_8"
        android:indeterminateTint="@color/dark_red"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="@id/buttonRegister"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>
</androidx.constraintlayout.widget.ConstraintLayout>